Add system info API and UI

--- a/website/src/styles/main.scss
+++ b/website/src/styles/main.scss
@@ -24,7 +24,7 @@ body {
   font-family: 'Manrope', sans-serif;
 }
 
-header {
+#app > header {
   background-color: #277bc0;
   color: #fff;
   position: sticky;
