Show the message waveform on the details page

--- a/website/src/styles/main.scss
+++ b/website/src/styles/main.scss
@@ -25,6 +25,10 @@ body {
   font-family: 'Manrope', sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 #app > header {
   background-color: #277bc0;
   color: #fff;
